<resources>
    <string name="app_name">CarHive</string>
    <string name="logo">Logo</string>
    <string name="update_car">Update Car</string>
    <string name="create_car">Create Car</string>
    <string name="car_created_successfully">Car created successfully</string>
    <string name="enter_car_name_and_select_images">Please enter a car name and select 5 images</string>
    <string name="failed_to_load_cars">Failed to load cars</string>
    <string name="car_updated_successfully">Car updated successfully</string>
    <string name="failed_to_update_car">Failed to update car</string>
    <string name="car_name_cannot_be_empty">Car name cannot be empty</string>
    <string name="failed_to_upload_image">Failed to upload image</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="num_photos">%d Photos</string>
    <string name="new_name">New Name</string>
    <string name="car_name_label">Car Name</string>
    <string name="select_image">Select Image</string>
    <string name="remove_image">Remove</string>
    <string name="max_images_allowed">Only 5 images are allowed</string>
    <string name="need_five_images">You need to select 5 images</string>
    <string name="image_preview_description">Image preview</string>
    <string name="entity_created_success">%1$s created successfully</string>
    <string name="entity_create_failed">Failed to create %1$s</string>
    <string name="entity_load_failed">Failed to load %1$s</string>
    <string name="entity_updated_success">%1$s updated successfully</string>
    <string name="entity_update_failed">Failed to update %1$s</string>
    <string name="entity_deleted_success">%1$s deleted successfully</string>
    <string name="entity_delete_failed">Failed to delete %1$s</string>
    <string name="add_car">Add car\n</string>
    <string name="full_image_description">Full image view\n</string>
    <string name="images_selected">0</string>
    <string name="failed_to_create_car">Failed to create car\n</string>
    <string name="car_deleted_successfully">Car deleted successfully\n</string>
    <string name="failed_to_delete_car">Failed to delete car</string>
    <string name="failed_to_delete_car_images">Failed to delete car images\n</string>
    <string name="no_images_available">No images available</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="deletion_confirmation_message">Are you sure you want to delete this car?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_to_delete_images">failed to delete images\n</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="car_image">Car image</string>
    <string name="view_more">View more</string>
    <string name="edit">Edit</string>
    <string name="options">Options</string>
    <string name="welcome_back_to">Welcome back to</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="please_enter_your_information_for_continue">Please enter your information for continue</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="image">image</string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="min_6_characters_with_upper_lower_numbers_and_special_symbols">* Min. 6 characters, with upper, lower, numbers, and special symbols.</string>
    <string name="curp">CURP</string>
    <string name="phone_number">Phone number</string>
    <string name="voter_id">Voter ID</string>
    <string name="i_accept_the">I accept the</string>
    <string name="finish_registration">Finish Registration</string>
    <string name="choose_image">Choose Image</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="verification">Verification</string>
    <string name="esperando_verificaci_n_de_correo">Waiting for verification email…</string>
    <string name="continuar">Continue</string>
    <string name="didn_t_you_receive_the_email_resend">Didn\'t you receive the email? Resend</string>
    <string name="welcome_to_carhive">Welcome to CarHive</string>
    <string name="you_are_already_part_of_us">You are already part of us!</string>
    <string name="thanks_for_joining_us_your_next_car_is_just_a_few_clicks_away">Thanks for joining us! Your next car is just a few clicks away.</string>
    <string name="get_started">Get started</string>
    <string name="send_recovery_email">Send recovery email</string>
    <string name="recover_your_password">Recover your password</string>
    <string name="personal_information">Personal information</string>
    <string name="home">Home</string>
    <string name="there_are_no_cars_available">There are no cars available</string>
    <string name="favorites">Favorites</string>
    <string name="there_are_no_favorites_in_your_list">There are no favorites in your list</string>
    <string name="become_a_seller">Become a Seller</string>
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="delete_favorite">Delete Favorite</string>
    <string name="edit_car_title">Edit Car</string>
    <string name="update_button">Update</string>
    <string name="confirm_reset">Confirm Reset</string>
    <string name="reset_filters_message">Are you sure you want to reset all filters?</string>
    <string name="filters_reset_successfully">Filters reset successfully</string>
    <string name="brands_selected">Brands selected: %1$s</string>
    <string name="error_fetching_cars">Error fetching cars</string>
    <string name="error_fetching_favorite_status">Error fetching favorite status</string>
    <string name="car_added_to_favorites">Car added to favorites</string>
    <string name="error_adding_favorite">Error adding car to favorites</string>
    <string name="car_removed_from_favorites">Car removed from favorites</string>
    <string name="error_removing_favorite">Error removing car from favorites</string>
    <string name="error_fetching_user_data">Error fetching user data</string>
    <string name="brand_selected">brand selected\n</string>
    <string name="creating_listing">Creating car listing…</string>
    <string name="error_fill_all_fields">Please fill in all fields</string>
    <string name="error_select_5_images">You must select exactly 5 images</string>
    <string name="success_listing_created">Car listing created successfully!</string>
    <string name="error_max_images">You can only select a maximum of %1$d images</string>
    <string name="image_counter">%1$d/%2$d images selected</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_five_images">You must select exactly 5 images.</string>
    <string name="complete_all_fields">Please complete all fields.</string>
    <string name="uploading_images">Uploading images, please wait…</string>
    <string name="changes_saved">Changes saved successfully.</string>
    <string name="error_saving_changes">Error uploading images or saving changes. Please try again.</string>
    <string name="image_count_text">%1$d / %2$d images selected</string>
    <string name="create_button">create\n</string>
    <string name="new_product_title">New Car</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="sold_icon_sold">Sold</string>
    <string name="sold_icon_unsold">Unsold</string>
    <string name="confirm_delete_dialog">Confirm Delete</string>
    <string name="car_detail_dialog">Car Details</string>
    <string name="edit_car_dialog">Edit Car</string>
    <string name="car_brand">Brand</string>
    <string name="sold_status_green">Green</string>
    <string name="sold_status_gray">Gray</string>
    <string name="car_favorites_count">Favorites: %d</string>
    <string name="car_detail_dialog_title">Car Details</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="placeholder_image_description">Loading image</string>
    <string name="error_fetching_favorite_count">Error fetching favorite count for car</string>
    <string name="user_not_authenticated">User not authenticated</string>
    <string name="error_adding_car">Error adding car</string>
    <string name="error_updating_car">Error updating car</string>
    <string name="error_deleting_car">Error deleting car</string>
    <string name="error_updating_sold_status">Error updating car sold status</string>
    <string name="error_user_not_authenticated">Usuario no autenticado</string>
    <string name="car_model">Model: %1$s</string>
    <string name="car_color">Color: %1$s</string>
    <string name="car_transmission">Transmission: %1$s</string>
    <string name="car_fuel_type">Fuel Type: %1$s</string>
    <string name="car_doors">Doors: %1$d</string>
    <string name="car_engine_capacity">Engine Capacity: %1$s</string>
    <string name="car_location">Location: %1$s</string>
    <string name="car_condition">Condition: %1$s</string>
    <string name="car_vin">VIN: %1$s</string>
    <string name="car_previous_owners">Previous Owners: %1$d</string>
    <string name="car_price">$%1$s</string>
    <string name="car_description">Description: %1$s</string>
    <string name="image_count">%1$d/%2$d</string>
    <string name="car_details_title">Car Details</string>
    <string name="description_label">Description</string>
    <string name="default_car_condition">New</string>
    <string name="error_empty_search_query">error empty search query</string>
    <string name="no_results_found">no results found</string>
    <string name="back">Back</string>
    <string name="become_seller">Become a Seller</string>
    <string name="all">All</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="date_privacy_policy"><u>Effective Date:</u> November 1, 2024</string>
    <string name="context_privacy_policy">At CarHive, we are committed to protecting your personal data and respecting your privacy.</string>
    <string name="context_privacy_policy1">This Privacy Policy outlines how we collect, use, store, and protect your information when you use our platform. By accessing or using CarHive, you agree to the terms outlined in this policy.</string>
    <string name="data_collection">1. Data Collection</string>
    <string name="context_data_collection">We collect the following types of personal data:</string>
    <string name="model_name">Model name</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="email">Email</string>
    <string name="verified">Verified</string>
    <string name="role">Role</string>
    <string name="unban_button">UNBAN</string>
    <string name="ban_button">BAN</string>
    <string name="user_image_desc">User Image</string>
    <string name="user_seller">Cars</string>
    <string name="Cars">Cars</string>
    <string name="Car"><u>Cars</u></string>
    <string name="Comments">Comments</string>
    <string name="user_car">User or Car Name</string>
    <string name="last_message">Last Message</string>
    <string name="num">9</string>
</resources>