<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingVertical="16dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <!-- Profile Image -->
        <ImageView
            style="@style/circle_shape_ic"
            android:id="@+id/profileImageView"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_person" />
    </LinearLayout>

    <!-- Username and last message Content -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="5dp">

        <!-- User Name -->
        <TextView
            style="@style/title_content_chat"
            android:id="@+id/userNameTextView"
            android:text="@string/user_car" />

        <!-- Last Message and Indicators -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- File Icon -->
            <ImageView
                style="@style/ic_content_chat"
                android:id="@+id/fileIconImageView"
                android:src="@drawable/ic_generic_file"
                android:layout_marginEnd="8dp" />

            <!-- Last Message -->
            <TextView
                style="@style/content_notify"
                android:id="@+id/lastMessageTextView"
                android:text="@string/last_message"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <!-- Unread Count -->
        <TextView
            style="@style/count_notify"
            android:id="@+id/unreadCountTextView"
            android:layout_height="20dp"
            android:background="@drawable/circle_shape"
            android:text="@string/num"
            android:paddingVertical="2dp"
            android:paddingHorizontal="6dp" />

    </LinearLayout>

</LinearLayout>
