<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/carModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/model_name"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:fontFamily="@font/inter_bold"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/carPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/price"
                android:fontFamily="@font/inter_bold"
                android:textSize="16sp"
                android:textColor="@android:color/holo_green_dark" />

        </LinearLayout>

        <!-- Botón de eliminar de favoritos (icono de X) -->
        <ImageButton
            android:id="@+id/deleteFavoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_exit"
            android:contentDescription="Eliminar de favoritos" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
