<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="40dp"
    tools:context=".presentation.seller.view.SellerProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibtnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/user_seller"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle"
                    android:scaleType="centerCrop"
                    android:padding="10dp"
                    android:contentDescription="Profile seller"/>

                <ImageView
                    android:id="@+id/ivIsVerified"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignEnd="@id/profile_image"
                    android:layout_alignBottom="@id/profile_image"
                    android:src="@drawable/ic_verified" />

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_name"
                    android:layout_centerHorizontal="true"
                    android:text="Culiacán, Sinaloa"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    android:visibility="gone"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@+id/profile_image">

                    <!-- Primer conjunto: Número y Texto -->
                    <TextView
                        android:id="@+id/num_cars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:text="7"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/num_comments"
                        app:layout_constraintHorizontalChainStyle="spread_inside" />

                    <TextView
                        android:id="@+id/cars"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cars"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/num_cars"
                        app:layout_constraintStart_toStartOf="@+id/num_cars"
                        app:layout_constraintEnd_toEndOf="@+id/num_cars"
                        android:layout_marginTop="2dp" />

                    <!-- Segundo conjunto: Número y Texto -->
                    <TextView
                        android:id="@+id/num_comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="7"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/num_cars"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontalChainStyle="spread_inside" />

                    <TextView
                        android:id="@+id/comments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Comments"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/num_comments"
                        app:layout_constraintStart_toStartOf="@+id/num_comments"
                        app:layout_constraintEnd_toEndOf="@+id/num_comments"
                        android:layout_marginTop="2dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout
                    android:id="@+id/stars_seller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/date"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp">

                <!-- Primer TextView con margen adicional -->
                <TextView
                    android:id="@+id/Carbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Car"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="32dp"
                    android:textColor="@color/blue"/>

                <!-- Segundo TextView con margen adicional -->
                <TextView
                    android:id="@+id/Commentbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Comments"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="32dp" />
            </LinearLayout>



            <ListView
                android:id="@+id/list_cars_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >
            </ListView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
